<resources>
    <string name="app_name">NamOps Fleet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="signout">Sign Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_vehicles">Vehicles</string>
    <string name="menu_tyres">Tyres</string>
    <string name="menu_fuel">Fuel</string>
    <string name="Cancel">Cancel</string>
    <string name="dev_qualification">BSc in Electrical and Computer Engineering\nUniversity of Cape Town</string>
    <string name="OK">OK</string>
    <string name="user_avatar">User Icon layout</string>
    <string name="vehicle_list">Vehicles</string>
    <string name="swap_tyres">Swap Tyres</string>
    <string name="mount_tyre">Mount Tyre</string>
    <string name="export_to_excel">Export to excel</string>
    <string name="unmount_tyre">UnMount Tyre</string>
    <string name="find_vehicle">Find vehicle</string>
    <string name="unit_number">Unit number e.g T01</string>
    <string name="vin_number">VIN number</string>
    <string name="select_vehicle_type">Vehicle Type</string>
    <string name="select_vehicle_model">Vehicle Model</string>
    <string name="select_vehicle_make">Vehicle Make</string>
    <string name="Year">Year</string>
    <string name="import_from_excel">Import from excel</string>
    <string name="continue_vehicle_reg">Next</string>
    <string name="plate_number">Plate Number e.g N234W</string>
    <string name="vehicle_color">Color</string>
    <string name="select_vehicle_color">Color</string>
    <string name="engine_number">Engine number</string>
    <string name="select_department">Department</string>
    <string name="select_fueltype">Fuel Type</string>
    <string name="register">Register</string>
    <string name="tyre_sn_number">Serial Number</string>
    <string-array name="tyre_size">
        <item>Select tyre size…</item>
        <item>385/65R225</item>
        <item>315/80R225</item>
    </string-array>
    <string name="select_tyre_brand">Brand</string>
    <string name="tyre_condition">Current Tyre Condition</string>
    <string name="select_tyre_condition">Current tyre condition</string>
    <string name="tyre_purchase_date">Purchase date</string>
    <string name="select_tyre_purchase_condition">Condition when purchased</string>
    <string name="tyre_cost">Purchase Price</string>
    <string name="select_purchase_tread_type">Tread type when purchased</string>
    <string name="survey_tyre">Inspection</string>
    <string name="no_place">No record found.</string>
    <string name="tyre_tread_depth">Tread depth when purchased</string>
    <string name="no_tyres_recorded">No record found.</string>
    <string name="no_vehicles">No record found.</string>
    <string name="tyre_sn">Tyre serial number</string>
    <string name="vehicle_no">Unit number</string>
    <string name="mount_position">Mount position</string>
    <string name="comment">Comments…</string>
    <string name="mount">Mount</string>
    <string name="un_mount_tyre">UnMount</string>
    <string name="current_depth">Current tread depth</string>
    <string name="current_tread_condition">Current tread condition</string>
    <string name="record">Record</string>
    <string name="current_condition">Tyre condition</string>
    <string name="mount_record">Mount Records</string>
    <string name="survey_record">Inspection Records</string>
    <string name="update">Update</string>
    <string name="recommended_pressure">Recommended pressure</string>
    <string name="un_mount_reason">Reason for unmounting tyre</string>
    <string name="actual_pressure">Actual tyre pressure</string>
    <string name="valve_condition">Valve condition</string>
    <string name="valve_present">Valve present?</string>
    <string name="cap_present">Is the cap present?</string>
    <string name="current_tread_type">Current tread type</string>
    <string name="select_removal_reason">Select reason for removal</string>
    <string name="menu_notifications">Notifications</string>
    <string name="tyre_vendor">Select tyre vendor…</string>
    <string name="repair_cost">Cost of repair</string>
    <string name="send_tyre_for_repair">Repairs</string>
    <string name="send">Send for repair</string>
    <string name="receive">Return from repair</string>
    <string name="receive_tyre_repair">Receive</string>
    <string name="tyre_vendors">Tyre vendors</string>
    <string name="reason_for_repair">Reason for repair</string>
    <string name="records">Records</string>
    <string name="repair_record">Repair Records</string>
    <string name="vendor_name">Name</string>
    <string-array name="vendor_type">
        <item>Select vendor type…</item>
        <item>Garage</item>
        <item>Retailer</item>
        <item>Depot</item>
        <item>Supplier</item>
    </string-array>
    <string name="phone_1">Phone 1</string>
    <string name="phone_2">Phone 2</string>
    <string name="vendor_fax">Fax</string>
    <string name="vendor_email">Email address</string>
    <string name="vendor_contact">Contact</string>
    <string name="vendor_address_1">Address 1</string>
    <string name="vendor_address_2">Address 2</string>
    <string name="vendor_city">City</string>
    <string name="vendor_country">Country</string>
    <string name="find_tyre_vendor">Find tyre vendor</string>
    <string name="find_tyre">Find tyre</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="sign_up_with_phone">Sign up with phone</string>
    <string name="have_an_account">Already have an account? Sign in.</string>
    <string name="re_password">Confirm password</string>
    <string name="name">Full name</string>
    <string name="cellphone">Cellphone</string>
    <string name="email_address">Email address</string>
    <string name="company_number">Company number</string>
    <string name="password">Password</string>
    <string name="select_company_name">Company name</string>
    <string name="verify_email">Email verification link has been sent to your email.\nClick on the link to verify your email address.
    </string>
    <string name="resend_link">Resend Link</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="sign_in_with_phone">Sign in with phone</string>
    <string name="create_account">Create new account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="btn_login">Login</string>
    <string name="reset_btn">Reset</string>
    <string name="btn_submit">Submit</string>
    <string name="resend_code">Resend code</string>
    <string name="input_phone_verify_code">Enter phone verification code</string>
    <string name="my_profile">My Profile</string>
    <string name="info">Info</string>
    <string name="share_app">Share app</string>
    <string name="about_developer">About developer</string>
    <string name="update_account">Update account</string>
    <string name="menu_trailer">Trailers</string>
    <string name="select_trailer_make">Manufacturer</string>
    <string name="onto_horse">Mount onto Horse</string>
    <string name="onto_trailer">Mount onto Trailer</string>
    <string name="find_trailer">Find trailer</string>
    <string name="mount_trailer">Mount Trailer</string>
    <string name="unmount_trailer">UnMount Trailer</string>
    <string name="vehicle_number">Unit number e.g. H01</string>
    <string name="trailer_number">Trailer Number</string>
    <string name="horse_number">Horse Number e.g. H01</string>
    <string name="select_trailer_type">Trailer type</string>
    <string name="block_user">Block this account?</string>
    <string name="email_or_cell">User email or cellphone</string>
    <string name="find_account">Find account</string>
    <string name="find_btn">Find</string>
    <string name="no_users_yet">No users yet.</string>
    <string name="accounts">Accounts</string>
    <string name="select_tyre_size">Size</string>
    <string name="worn_out_tyres">Worn-out tyres</string>
    <string name="no_notifications">No notifications.</string>
    <string name="no_tyres_on_unit">No tyres found on this unit.</string>
    <string name="mounted_tyres">Mounted Tyres</string>
    <string name="share_app_text">Download NamOps Fleet at: https://play.google.com/store/apps/details?id=com.pet001kambala.namopsfleetmanager</string>
    <string-array name="trailer_type">
        <item>Select trailer type</item>
        <item>Side Loader</item>
        <item>Skeletal</item>
        <item>Flat Deck</item>
        <item>Super Link</item>
    </string-array>
    <string-array name="Tyre_brand">
        <item>Select brand…</item>
        <item>Firestone</item>
        <item>Gargo</item>
        <item>Golden Crown</item>
        <item>GoodYear</item>
        <item>Mirage</item>
        <item>DunLop</item>
        <item>Yokohama</item>
        <item>TechKing</item>
        <item>TaiTong</item>
        <item>Gallant</item>
        <item>Terraking</item>
        <item>Sumitomo</item>
        <item>Double Star</item>
        <item>Cargo Force</item>
        <item>Road Shane</item>
        <item>Power Truck</item>
        <item>Boto</item>
        <item>GOL</item>
        <item>GAL</item>
        <item>SUN</item>
        <item>TAI</item>
        <item>Continental</item>
        <item>SunFull</item>
        <item>DuraTough</item>
        <item>JIN</item>
        <item>Kelly</item>
        <item>Rhino</item>
        <item>Michelin</item>
        <item>SP</item>
        <item>TRE</item>
        <item>BridgeStone</item>
        <item>Kapsen</item>
        <item>Onyx</item>
        <item>Green</item>
        <item>Tree</item>
        <item>CAR</item>
        <item>B.S</item>
        <item>KAP</item>
        <item>GY</item>
        <item>RDA</item>
        <item>D.C</item>
        <item>HanKook</item>
        <item>AM</item>
        <item>Ter</item>
        <item>Sava</item>
        <item>BAR</item>
        <item>Belangu</item>
        <item>Double Coin</item>
        <item>ZEF</item>
        <item>DOW</item>
        <item>TEX</item>
        <item>DSR</item>
        <item>SEM</item>
        <item>WF</item>
        <item>HRD</item>
        <item>Wireforce</item>
        <item>SAV</item>

    </string-array>
    <string-array name="Departments">
        <item>Select department…</item>
        <item>Workshop</item>
        <item>Depot Operations</item>
        <item>Local Transport</item>
    </string-array>
    <string-array name="Tyre_conditions">
        <item>Select tyre condition…</item>
        <item>New</item>
        <item>Scrap</item>
        <item>Puncture</item>
        <item>Re-tread</item>
        <item>Damaged</item>
        <item>Others</item>
    </string-array>
    <string-array name="treadTypes">
        <item>Select tread type…</item>
        <item>MGO22</item>
        <item>FD</item>
    </string-array>
    <string-array name="Vehicle_Types">
        <item>Select type…</item>
        <item>Pick Up Bakkie</item>
        <item>Side Loader</item>
        <item>Truck</item>
        <item>ForkLift</item>
        <item>Stacker</item>
        <item>Flat Deck</item>
    </string-array>
    <string-array name="Vehicle_models">
        <item>Select model…</item>
        <item>FH440</item>
        <item>Flat Deck</item>
        <item>G420</item>
        <item>NP200</item>
        <item>7600i</item>
        <item>K0274</item>
        <item>R124</item>
        <item>R410</item>
        <item>ICB1</item>
        <item>Side Loader</item>
        <item>Skeletal</item>
        <item>SMV15–1200B</item>
        <item>Super Link</item>
        <item>Actros</item>
        <item>8 TON</item>
        <item>FD70T-MWF3</item>
    </string-array>
    <string-array name="Fuel_type">
        <item>Select fuel type…</item>
        <item>Diesel</item>
        <item>Petrol</item>
    </string-array>
</resources>