<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_profile"
            android:title="@string/my_profile"
            android:icon="@drawable/ic_my_profile"
            />
        <item
            android:id="@+id/nav_vehicles"
            android:icon="@drawable/ic_horse"
            android:title="@string/menu_vehicles" />

        <item
            android:id="@+id/nav_trailer"
            android:icon="@drawable/ic_trailer"
            android:title="@string/menu_trailer" />
        <item
            android:id="@+id/nav_tyre"
            android:icon="@drawable/ic_tyre"
            android:title="@string/menu_tyres" />

        <item android:title="@string/info"
            android:id="@+id/info"
            >
            <menu>
                <item android:id="@+id/nav_share_app"
                    android:title="@string/share_app"
                    android:icon="@drawable/ic_share_app"
                    />
                <item android:title="@string/about_developer"
                    android:id="@+id/about_developer"
                    android:icon="@drawable/ic_my_profile"
                    />
            </menu>
        </item>
    </group>
</menu>