<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                tools:context=".ui.fragment.LoginFragment">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/email_address"
                        android:inputType="textAutoComplete"
                        android:padding="9dp"
                        idMailCell="@{auth.idMailCell}"
                        app:errorMsg="@{`Invalid email address.`}"
                        android:singleLine="true"
                        android:text="@={auth.idMailCell}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="9dp"
                        android:singleLine="true"
                        android:text="@={auth.password}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_btn"
                    style="@style/save_btn_outlined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textAllCaps="false"
                    password="@{auth.password}"
                    idMailCell="@{auth.idMailCell}"
                    android:text="@string/btn_login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_layout" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/reset_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textStyle="bold"
                    android:visibility="@{authType == AuthType.EMAIL? View.VISIBLE: View.GONE}"
                    android:textColor="@color/app_color"
                    app:layout_constraintBottom_toBottomOf="@id/create_new_account"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:id="@+id/create_new_account"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/app_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_btn" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <data>
        <import type="com.pet001kambala.namopsfleetmanager.model.AuthType"/>
        <import type="android.view.View"/>
        <variable
            name="authType"
            type="com.pet001kambala.namopsfleetmanager.model.AuthType" />

        <variable
            name="auth"
            type="com.pet001kambala.namopsfleetmanager.model.Auth" />
    </data>
</layout>
